--- a/index.html
+++ b/index.html
@@ -187,13 +187,14 @@
 <script>
 /* ============ 1) Firebase Config (replace) ============ */
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-  databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_PROJECT_ID.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyDY9AUUyco-stWWr3HxZ4VYDASN5JQHlAY",
+  authDomain: "bingogame-ea6c9.firebaseapp.com",
+  databaseURL: "https://bingogame-ea6c9-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "bingogame-ea6c9",
+  storageBucket: "bingogame-ea6c9.firebasestorage.app",
+  messagingSenderId: "553263162615",
+  appId: "1:553263162615:web:b20e3feb6d282a3f3b9ff2",
+  measurementId: "G-ED0490QCMN"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
